--- a/document/datatype/coding/coding.component.scss
+++ b/document/datatype/coding/coding.component.scss
@@ -16,7 +16,7 @@
  * - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  */
 :host {
-    ::ng-deep .mat-form-field {
+    ::ng-deep .mat-mdc-form-field {
         font-family: monospace;
     }
 }
